mobile styling aboutMe

--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,7 @@
                 <a target='_blank' id='phoneResumeIcon' href='assets/Eric_Moskowitz_Resume_082015.pdf' target='_blank'><img src="assets/round_resume_icon.png"></a>
                 <a target='_blank' id='phoneGithubIcon' href='https://github.com/3moz' target='_blank'>
                     <img src="assets/GitHub-Mark-64px.png"></a>
-                <a target='_blank' id='phoneLinkedinIcon' href='https://www.linkedin.com/in/ericmoskowitz' target='_blank'>
-                    <img src='assets/In-Black-66px-TM.png'></a>
+                <a target='_blank' id='phoneLinkedinIcon' href='https://www.linkedin.com/in/ericmoskowitz' target='_blank'><img src='assets/In-Black-66px-TM.png'></a>
                 <a target='_blank' id='phoneEmailIcon' href='mailto:moskowitz.e@@gmail.com'>
                     <img src='assets/ic_email_black_48dp_1x.png'></a>
                     
