--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
                 
                     <li>09.01.2015 - We're live! hope you like the site and all it contains - enjoy!</li>
                     <li>09.03.2015 - <a href='assets/Eric_Moskowitz_Resume_092015.pdf'>Updated resume!</a></li>
+                    <li>09.03.2015 - I just wrote a new app using flux-redux and react. <a href='http://104.236.5.181:3001/'>Check it out here.</a> I will create a new section for it in the main area soon.</li>
                 </ul>
             
             </div>
