--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
                     <li>09.03.2015 - <a href='assets/Eric_Moskowitz_Resume_07_2016.pdf'>Updated resume!</a></li>
                     <li>10.19.2015 - I just wrote a new app using flux-redux and react. <a target=none href='http://104.236.5.181:3001/'>Check it out here.</a> I will create a new section for it in the main area soon.</li>
                     <li>01.11.2016 - Main area includes ReduxBank</li>
+                    <li>07.03.2016 - <a href='assets/Eric_Moskowitz_Resume_07_2016.pdf'>Updated resume!</a></li>
                 </ul>
 
             </div>
@@ -208,6 +209,7 @@
                     <li>09.03.2015 - <a href='assets/Eric_Moskowitz_Resume_07_2016.pdf'>Updated resume!</a></li>
                     <li>10.19.2015 - I just wrote a new app using flux-redux and react. <a target=none href='http://104.236.5.181:3001/'>Check it out here.</a> I will create a new section for it in the main area soon.</li>
                     <li>01.11.2016 - Main area includes ReduxBank</li>
+                    <li>07.03.2016 - <a href='assets/Eric_Moskowitz_Resume_07_2016.pdf'>Updated resume!</a></li>
                 </ul>
             </div>
 
